convert/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-avec-port-clair.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-avec-port-clair.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/storage: "true"
        io.kompose.service: mongodb
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_DATABASE
              value: rof-bd
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: secret123
            - name: MONGO_INITDB_ROOT_USERNAME
              value: root
            - name: MONGO_PASSWORD_DB
              value: secret
            - name: MONGO_USERNAME_DB
              value: admin
          image: mongo:4.0
          name: mongo
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: data-rof
      restartPolicy: Always
      volumes:
        - name: data-rof
          persistentVolumeClaim:
            claimName: data-rof
status: {}
