convert/storage-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: storage
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/storage: "true"
  podSelector:
    matchLabels:
      io.kompose.network/storage: "true"
